增加配置文件，包括MQ的配置信息

--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,37 @@
 							<mainClass>BrazilCenter.ProcessingService.service.ProcessServer</mainClass>
 						</manifest>
 					</archive>
+					<include>applicationContext.xml</include>
+					<excludes><exclude>ProcessConfig.xml</exclude></excludes>
+					
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-resources-plugin</artifactId>
+				<version>2.4</version>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+						<phase>package</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<encoding>UTF-8</encoding>
+							<outputDirectory>${project.build.directory}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/resources/</directory>
+									<includes>
+										<include>ProcessConfig.xml</include>
+									</includes>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
@@ -60,13 +90,18 @@
 		</dependency>
 		<dependency>
 			<groupId>BrazilCenter</groupId>
-			<artifactId>DaoUtils</artifactId>
+			<artifactId>BrazilCenterUtils</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>BrazilCenter</groupId>
+			<artifactId>BrazilCenterProcessUtils</artifactId>
 			<version>0.0.1-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-context</artifactId>
-			<version>4.1.6.RELEASE</version>
+			<version>4.3.2.RELEASE</version>
 		</dependency>
 	</dependencies>
 </project>
