--- a/.classpath
+++ b/.classpath
@@ -27,5 +27,30 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="target/lib/amqp-client-3.0.4.jar"/>
+	<classpathentry kind="lib" path="target/lib/antlr-2.7.6.jar"/>
+	<classpathentry kind="lib" path="target/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="target/lib/commons-collections-3.1.jar"/>
+	<classpathentry kind="lib" path="target/lib/commons-io-2.4.jar"/>
+	<classpathentry kind="lib" path="target/lib/commons-lang-2.6.jar"/>
+	<classpathentry kind="lib" path="target/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="target/lib/DaoUtils-0.0.1-SNAPSHOT.jar"/>
+	<classpathentry kind="lib" path="target/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="target/lib/hibernate-commons-annotations-3.2.0.Final.jar"/>
+	<classpathentry kind="lib" path="target/lib/hibernate-core-3.6.5.Final.jar"/>
+	<classpathentry kind="lib" path="target/lib/hibernate-jpa-2.0-api-1.0.0.Final.jar"/>
+	<classpathentry kind="lib" path="target/lib/javassist-3.12.0.GA.jar"/>
+	<classpathentry kind="lib" path="target/lib/jta-1.1.jar"/>
+	<classpathentry kind="lib" path="target/lib/junit-3.8.1.jar"/>
+	<classpathentry kind="lib" path="target/lib/log4j-1.2.17.jar"/>
+	<classpathentry kind="lib" path="target/lib/mysql-connector-java-5.1.25.jar"/>
+	<classpathentry kind="lib" path="target/lib/slf4j-api-1.6.1.jar"/>
+	<classpathentry kind="lib" path="target/lib/slf4j-nop-1.6.4.jar"/>
+	<classpathentry kind="lib" path="target/lib/spring-aop-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="target/lib/spring-beans-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="target/lib/spring-context-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="target/lib/spring-core-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="target/lib/spring-expression-4.1.6.RELEASE.jar"/>
+	<classpathentry kind="lib" path="target/lib/xml-apis-1.0.b2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
